# nix-utils

./: .gitignore  PS1.sh  README.md  abc  colorman.sh  configure.ac  data  dos2unix  dotfm.pl  getifaddrs_test.c  getop.sh  git-setup.sh  gnu-apt.pl  jre-install.sh  keymaker.sh  loop.sh  multiname.sh  mysql_log  new-install-tasks  parallel.sh  param.sh  postinstall-freebsd  postinstall-ubuntu  profile-linux  qt-move.sh  reboot.sh  server.sh  setup-git.sh  shell_test.txt  test.sh  timeout.sh  tomcat  tomcat.complete  tomcat00  ubuntu-postinstall.sh  update-nvidia  updateShellProfile.command  var.sh  vimrc  vimrc-util  (+3 more)
boot/: grub-cmd
conf/: local.conf-fontconfig  make.conf-freebsd  tomcatctl.bash_completion
doc/: awk-INTERNAL_FUNCTION.md  gawk.html  map.desktop  sed-awk-intro.md  sed.html  sed1line.md  template.awk
exp/: array.sh  counter.sh  dict.py  greet  loop.sh  metasploit-preinstall  multiname.sh  rpncal.pl  server.sh  sselct.sh  tex2html.awk  timeout.sh  tree.sh  vv.sh
test/: test.rb
tools/: Makefile.am  TODO  backup.sh  bind.py  brew.rb  brew.sh  candroid.sh  define.pod  define.py  define2.py  dpics.py  fortune.go  free.pl  fstat.pl  git-setup.sh  google.sh  ipinfo.rb  listdir.py  livehosts.pl  livehosts.sh  postinstall-centos  postinstall-ubuntu  resdown.py  rmbom.sh  strfmt.go  test.rb  tomcatctl  unix2dos  unix2dos.sh  updateShellProfile.command  wf.rb
